--- a/src/containers/Parser/Parser.css
+++ b/src/containers/Parser/Parser.css
@@ -7,6 +7,15 @@
 .textAreaRow > textarea {
     width: 100%;
     height: 300px;
+    border: 1px solid #ccc;
+    border-right: 0;
+}
+
+.textAreaRow > pre {
+    width: 100%;
+    height: 300px;
+    overflow-y: auto;
+    border: 1px solid #ccc;
 }
 
 .header {
